--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,13 @@
 /* COGS3 studyBuddy specific styles go here. */
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
+
 
 #title {
     background-color: #2A0934;
