--- a/css/styles.css
+++ b/css/styles.css
@@ -167,6 +167,14 @@ p {
     margin: 20px 10px;
 }
 
+.img-carousel { min-width: 800px;}
+
+@media (max-width: 768px) { 
+    .carousel .carousel-inner .item {
+        height: 500px;
+    }
+}
+
 /* Media Query Section*/
 
 @media (max-width: 1028px) {
